# nsx-soc-hal

./: CHANGELOG.md  CMakeLists.txt  README.md  nsx-module.yaml  release-please-config.json
.github/workflows/: ci.yml  release.yml
